# Afsluttende-Projekt-Datamatiker

./: .gitignore  C4 - afsluttende projekt.drawio  Dockerfile.base  README.md  Sekvensdiagram.drawio  Unavngivet diagram.drawio  config.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
cache-tools/: Dockerfile.cache-query-tools  cache_query_tools.py
credentials-api/: Dockerfile.credentials-api  credentials_api.py
credentials-api/templates/: index  index.html
email-tools/: Dockerfile.email-tools  email_tools.py
financial-entry-tools/: Dockerfile.financial-tools  financial_entry_tools.py
helpers_and_queries/: interfaces.py  mcp_credentials.py  mcp_helpers.py  mcp_tools_queries.py  query_cache.json
n8n-workflow-tools/: Dockerfile.n8n-workflow-tools  n8n_workflow_tools.py
nginx/certs/: ca.crt  ca.key  localhost-key.pem  localhost.pem
nginx/certs/sites/: localhost.config
nginx/conf.d/: default.conf
test/: utility_test.py
utility-tools/: Dockerfile.utility-tools  utility_tools.py
utilitytools/: Dockerfile.utility-tools  utility_tools.py
workflows/: [TEMPLATE] Automatisk email-rapport.json  [TEMPLATE] Contacts Sync - Google (Full).json  [TEMPLATE] Contacts Sync - Google (Import Only).json  [TEMPLATE] Contacts Sync - Outlook (Full).json  [TEMPLATE] Excel-rapport til email.json  [TEMPLATE] Ændringsovervågning.json
