[project]
name = "afsluttende-projekt"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "httpx",
  "python-dotenv>=1.2.1",
  "portalocker>=2.8.2",
  "requests>=2.31.0",
  "uvicorn[standard]>=0.33.0",
  "starlette>=0.27.0",
  "mcp>=1.0.0",
  "fastmcp>=3.1.0",
  "fastapi>=0.111.0",
  "cryptography>=42.0.0",
  "pydantic>=2.0.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.4.0"
]

 